--- a/resources/sass/phone/_all.scss
+++ b/resources/sass/phone/_all.scss
@@ -18,6 +18,7 @@
 @import '../../themes/phone/modules/cover';
 @import '../../themes/phone/modules/categories';
 @import '../../themes/phone/modules/actions';
+@import '../../themes/phone/modules/articles';
 
 /**********************************************************************************************************************/
 /*
