--- a/resources/css/phone/phone.css
+++ b/resources/css/phone/phone.css
@@ -8638,27 +8638,33 @@ body.x-desktop {
 .article-panel .bottom-bar.x-panel.x-floating .x-panel-inner .x-button .x-button-icon {
   color: #ffffff;
 }
-/* line 28, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
-.article-panel .bottom-bar.x-panel.x-floating .x-panel-inner .x-button.x-hasbadge .x-badge {
+/* line 27, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+.article-panel .bottom-bar.x-panel.x-floating .x-panel-inner .x-button .x-button-label, .article-panel .bottom-bar.x-panel.x-floating .x-panel-inner .x-button .x-badge, .article-panel .bottom-bar.x-panel.x-floating .x-panel-inner .x-button .x-hasbadge .x-badge, .x-hasbadge .article-panel .bottom-bar.x-panel.x-floating .x-panel-inner .x-button .x-badge {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
   background: none;
   border: 0px;
   text-shadow: none;
-  font-family: "opensans-regular";
   font-size: 16px;
   color: #ffffff;
-  padding: 0px;
-  top: 15px;
-  left: 40px;
   font-weight: normal;
+  position: relative;
+  top: -3px;
+  left: 5px;
+  width: 0px;
+  min-width: 0;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: -moz-inline-box;
+  display: inline-flex;
+  overflow: visible;
 }
-/* line 43, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 44, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .bottom-bar.x-panel.x-floating .x-panel-inner .comments-button {
   border-right: 1px solid #a4ccea;
 }
-/* line 46, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 47, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .bottom-bar.x-panel.x-floating .x-panel-inner .comments-button.pressed {
   border-right: 1px solid #5389c2;
 }
@@ -8688,50 +8694,50 @@ body.x-desktop {
   font-weight: normal!important;
   content: "\40";
 }
-/* line 61, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 62, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel h1 {
   font-size: 22px;
   line-height: 24px;
   color: #000000;
   margin: 20px 20px 5px 20px;
 }
-/* line 67, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 68, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .content {
   margin: 0 20px 20px 20px;
   padding: 20px 0 0 0;
   border-top: 1px solid #d9e0f0;
   font-size: 14px;
 }
-/* line 73, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 74, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .content p, .article-panel .content li, .article-panel .content a, .article-panel .content span {
   font-size: 14px;
 }
-/* line 76, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 77, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .content p, .article-panel .content span {
   margin-bottom: 10px;
 }
-/* line 79, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 80, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .content h1 {
   font-size: 18px;
 }
-/* line 82, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 83, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .content h2 {
   font-size: 17px;
 }
-/* line 85, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 86, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .content h2 span {
   font-size: 19px;
   color: #e64415 !important;
 }
-/* line 90, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 91, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .content h3, .article-panel .content h4, .article-panel .content h5, .article-panel .content h6 {
   font-size: 16px;
 }
-/* line 93, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 94, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .content a {
   color: #5389c2;
 }
-/* line 96, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 97, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .content img {
   position: relative;
   left: 50%;
