articles and rating styling

--- a/resources/sass/phone/_all.scss
+++ b/resources/sass/phone/_all.scss
@@ -19,6 +19,7 @@
 @import '../../themes/phone/modules/categories';
 @import '../../themes/phone/modules/actions';
 @import '../../themes/phone/modules/articles';
+@import '../../themes/phone/modules/rate';
 
 /**********************************************************************************************************************/
 /*
