--- a/resources/css/phone/phone.css
+++ b/resources/css/phone/phone.css
@@ -7755,6 +7755,8 @@ body.x-desktop {
   width: 60px;
   height: 60px;
   line-height: 60px;
+  top: -5px;
+  right: -5px;
 }
 /* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
 .close-button .close:before {
@@ -7769,9 +7771,28 @@ body.x-desktop {
   font-weight: normal!important;
   content: "\25";
 }
-/* line 91, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_core.scss */
+/* line 93, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_core.scss */
 .close-button .close::before {
   line-height: 60px;
+}
+
+/* line 98, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_core.scss */
+.back-button {
+  background: none;
+  border: 0px;
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.back-button .back:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 20px !important;
+  font-weight: normal!important;
+  content: "\28";
 }
 
 /* line 2, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_reset.scss */
@@ -8608,6 +8629,92 @@ body.x-desktop {
   background: #ee7f00;
 }
 /* line 8, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+.article-panel .top-bar .x-panel-inner {
+  padding: 0 10px;
+}
+/* line 11, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+.article-panel .top-bar .back-button {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 0 auto;
+  -moz-box-flex: 1;
+  box-flex: 1;
+  flex: 1 0 auto;
+  color: #ffffff;
+}
+/* line 15, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+.article-panel .top-bar .back-button .back {
+  color: #ffffff;
+  height: 55px;
+}
+/* line 19, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+.article-panel .top-bar .back-button .back::before {
+  line-height: 55px;
+}
+/* line 23, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+.article-panel .top-bar .back-button .x-button-label, .article-panel .top-bar .back-button .x-badge, .article-panel .top-bar .back-button .x-hasbadge .x-badge, .x-hasbadge .article-panel .top-bar .back-button .x-badge {
+  color: #ffffff;
+  font-size: 12px;
+  line-height: 55px;
+  height: 55px;
+  font-weight: normal;
+  text-align: left;
+}
+/* line 32, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+.article-panel .top-bar .share-facebook-button {
+  width: 30px;
+}
+/* line 35, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+.article-panel .top-bar .share-facebook-button .facebook {
+  color: #ffffff;
+  line-height: 30px;
+  height: 55px;
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.article-panel .top-bar .share-facebook-button .facebook:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 30px !important;
+  font-weight: normal!important;
+  content: "\26";
+}
+/* line 41, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+.article-panel .top-bar .share-facebook-button .facebook::before {
+  line-height: 55px;
+}
+/* line 46, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+.article-panel .top-bar .share-twitter-button {
+  width: 30px;
+  margin: 0 0 0 10px;
+}
+/* line 50, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+.article-panel .top-bar .share-twitter-button .twitter {
+  color: #ffffff;
+  line-height: 30px;
+  height: 55px;
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.article-panel .top-bar .share-twitter-button .twitter:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 30px !important;
+  font-weight: normal!important;
+  content: "\42";
+}
+/* line 56, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+.article-panel .top-bar .share-twitter-button .twitter::before {
+  line-height: 55px;
+}
+/* line 62, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .bottom-bar {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
@@ -8621,7 +8728,7 @@ body.x-desktop {
   background: #7caad6;
   border-top: 1px solid #a4ccea;
 }
-/* line 16, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 70, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .bottom-bar.x-panel.x-floating .x-panel-inner {
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
@@ -8630,15 +8737,15 @@ body.x-desktop {
   border-radius: 0px;
   background: #7caad6;
 }
-/* line 21, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 75, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .bottom-bar.x-panel.x-floating .x-panel-inner .x-button.pressed {
   background: #5389c2;
 }
-/* line 24, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 78, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .bottom-bar.x-panel.x-floating .x-panel-inner .x-button .x-button-icon {
   color: #ffffff;
 }
-/* line 27, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 81, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .bottom-bar.x-panel.x-floating .x-panel-inner .x-button .x-button-label, .article-panel .bottom-bar.x-panel.x-floating .x-panel-inner .x-button .x-badge, .article-panel .bottom-bar.x-panel.x-floating .x-panel-inner .x-button .x-hasbadge .x-badge, .x-hasbadge .article-panel .bottom-bar.x-panel.x-floating .x-panel-inner .x-button .x-badge {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
@@ -8650,7 +8757,7 @@ body.x-desktop {
   color: #ffffff;
   font-weight: normal;
   position: relative;
-  top: -3px;
+  top: -2px;
   left: 5px;
   width: 0px;
   min-width: 0;
@@ -8660,11 +8767,11 @@ body.x-desktop {
   display: inline-flex;
   overflow: visible;
 }
-/* line 44, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 98, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .bottom-bar.x-panel.x-floating .x-panel-inner .comments-button {
   border-right: 1px solid #a4ccea;
 }
-/* line 47, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 101, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .bottom-bar.x-panel.x-floating .x-panel-inner .comments-button.pressed {
   border-right: 1px solid #5389c2;
 }
@@ -8694,56 +8801,190 @@ body.x-desktop {
   font-weight: normal!important;
   content: "\40";
 }
-/* line 62, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 116, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel h1 {
   font-size: 22px;
   line-height: 24px;
   color: #000000;
   margin: 20px 20px 5px 20px;
 }
-/* line 68, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 122, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .content {
   margin: 0 20px 20px 20px;
   padding: 20px 0 0 0;
   border-top: 1px solid #d9e0f0;
   font-size: 14px;
 }
-/* line 74, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 128, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .content p, .article-panel .content li, .article-panel .content a, .article-panel .content span {
   font-size: 14px;
 }
-/* line 77, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 131, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .content p, .article-panel .content span {
   margin-bottom: 10px;
 }
-/* line 80, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 134, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .content h1 {
   font-size: 18px;
+  margin: 12px 0 10px 0;
 }
-/* line 83, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 138, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+.article-panel .content ul, .article-panel .content ol {
+  padding-bottom: 10px;
+  margin: 0 0 0 20px;
+}
+/* line 142, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+.article-panel .content li {
+  list-style: inherit;
+}
+/* line 145, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .content h2 {
   font-size: 17px;
+  margin: 12px 0 10px 0;
 }
-/* line 86, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 149, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .content h2 span {
   font-size: 19px;
   color: #e64415 !important;
 }
-/* line 91, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 154, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .content h3, .article-panel .content h4, .article-panel .content h5, .article-panel .content h6 {
   font-size: 16px;
+  margin: 10px 0 5px 0;
 }
-/* line 94, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 158, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .content a {
   color: #5389c2;
 }
-/* line 97, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
+/* line 161, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_articles.scss */
 .article-panel .content img {
   position: relative;
   left: 50%;
   -webkit-transform: translateX(-50%);
   -moz-transform: translateX(-50%);
   transform: translateX(-50%);
+}
+
+/* line 3, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_rate.scss */
+.rate-panel.x-panel.x-floating {
+  background: #7caad6;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
+  border-radius: 0;
+}
+/* line 7, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_rate.scss */
+.rate-panel.x-panel.x-floating .x-panel-inner {
+  background: #7caad6;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
+  border-radius: 0;
+}
+/* line 11, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_rate.scss */
+.rate-panel.x-panel.x-floating > .x-dock.x-sized {
+  margin: 0px;
+}
+/* line 17, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_rate.scss */
+.rate-panel .header .x-innerhtml {
+  color: #ffffff;
+  font-size: 18px;
+  padding: 20px 20px 10px 20px;
+}
+/* line 25, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_rate.scss */
+.rate-panel .content.x-panel .x-panel-inner {
+  background: #7caad6;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
+  border-radius: 0;
+  margin: 0 20px 20px 20px;
+  padding: 20px 0 0 0;
+  border-top: 1px solid #ffffff;
+}
+/* line 34, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_rate.scss */
+.rate-panel .content .empty-star .star {
+  color: #a4ccea;
+  height: 36px;
+  width: 36px;
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.rate-panel .content .empty-star .star:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 36px !important;
+  font-weight: normal!important;
+  content: "\40";
+}
+/* line 40, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_rate.scss */
+.rate-panel .content .empty-star .star::before {
+  line-height: 36px;
+}
+/* line 45, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_rate.scss */
+.rate-panel .content .empty-star.filled-star .star {
+  color: #ffffff;
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.rate-panel .content .empty-star.filled-star .star:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 36px !important;
+  font-weight: normal!important;
+  content: "\41";
+}
+/* line 52, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_rate.scss */
+.rate-panel .send-button {
+  background: #5389c2;
+  border: 1px solid #ffffff;
+  margin: 20px auto;
+}
+/* line 57, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_rate.scss */
+.rate-panel .send-button .send {
+  color: #ffffff;
+  margin: 0 10px 0 15px;
+  height: 40px;
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.rate-panel .send-button .send:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 20px !important;
+  font-weight: normal!important;
+  content: "\44";
+}
+/* line 63, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_rate.scss */
+.rate-panel .send-button .send::before {
+  line-height: 40px;
+}
+/* line 67, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_rate.scss */
+.rate-panel .send-button .x-button-label, .rate-panel .send-button .x-badge, .rate-panel .send-button .x-hasbadge .x-badge, .x-hasbadge .rate-panel .send-button .x-badge {
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: normal;
+  font-family: "opensans-regular";
+  text-align: left;
+}
+/* line 76, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_rate.scss */
+.rate-panel .close-button .close {
+  color: #ffffff;
 }
 
 /**********************************************************************************************************************/
