--- a/resources/themes/phone/mixins/_icon.scss
+++ b/resources/themes/phone/mixins/_icon.scss
@@ -31,8 +31,7 @@
 
     // Row 1
 	
-	@if ($name == "checkmark") { @return "\20"; }
-    @else if ($name == "checkmark-circle") { @return "\21"; }
+    @if ($name == "checkmark-circle") { @return "\21"; }
 	@else if ($name == "cog") { @return "\22"; }
 	@else if ($name == "comment") { @return "\23"; }
 	@else if ($name == "comment_empty") { @return "\24"; }
@@ -55,6 +54,7 @@
 	@else if ($name == "star-filled") { @return "\41"; }
 	@else if ($name == "twitter") { @return "\42"; }
 	@else if ($name == "delete") { @return "\43"; }
+	@else if ($name == "checkmark") { @return "\44"; }
 
 	
     @else {
