--- a/resources/css/phone/phone.css
+++ b/resources/css/phone/phone.css
@@ -7833,6 +7833,47 @@ body.x-desktop {
 }
 
 /* line 22, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_reset.scss */
+.x-toolbar-dark {
+  background: none;
+  border: 0px;
+  margin: 0px;
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  -ms-border-radius: 0px;
+  -o-border-radius: 0px;
+  border-radius: 0px;
+  padding: 0;
+}
+/* line 29, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_reset.scss */
+.x-toolbar-dark .x-button {
+  background: none;
+  border: 0px;
+  padding: 0px;
+  margin: 0px;
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  -ms-border-radius: 0px;
+  -o-border-radius: 0px;
+  border-radius: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  display: box;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  box-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  box-align: center;
+  align-items: center;
+}
+/* line 40, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_reset.scss */
+.x-toolbar-dark .x-button .x-button-icon.x-hidden {
+  display: block;
+}
+
+/* line 46, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_reset.scss */
 .x-button {
   background: none;
   border: 0px;
@@ -7855,28 +7896,28 @@ body.x-desktop {
   box-align: center;
   align-items: center;
 }
-/* line 32, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_reset.scss */
+/* line 56, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_reset.scss */
 .x-button .x-button-icon.x-hidden {
   display: block;
 }
 
-/* line 38, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_reset.scss */
+/* line 62, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_reset.scss */
 .x-list-normal .x-list-item {
   width: auto;
 }
-/* line 41, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_reset.scss */
+/* line 65, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_reset.scss */
 .x-list-normal .x-list-item .x-list-item-body {
   padding: 0px;
 }
-/* line 44, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_reset.scss */
+/* line 68, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_reset.scss */
 .x-list-normal .x-list-item.x-list-item-tpl {
   border: 0px;
 }
-/* line 47, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_reset.scss */
+/* line 71, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_reset.scss */
 .x-list-normal .x-list-item.x-list-item-tpl .x-innerhtml {
   padding: 0px;
 }
-/* line 50, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_reset.scss */
+/* line 74, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/core/_reset.scss */
 .x-list-normal .x-list-item.x-list-item-tpl.x-list-footer-wrap {
   border: 0px;
 }
@@ -8599,8 +8640,9 @@ body.x-desktop {
 .actions-list .menu-bar .back-btn {
   background: none;
   border: 0px;
+  padding: 10px;
 }
-/* line 74, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_actions.scss */
+/* line 75, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_actions.scss */
 .actions-list .menu-bar .back-btn .back {
   -webkit-transform: rotate(90deg);
   -moz-transform: rotate(90deg);
@@ -8984,6 +9026,444 @@ body.x-desktop {
 }
 /* line 76, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_rate.scss */
 .rate-panel .close-button .close {
+  color: #ffffff;
+}
+
+/* line 1, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.videos-list {
+  background: #ffffff;
+}
+/* line 4, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.videos-list .top-bar {
+  background: #ee7f00;
+  border-bottom: 2px solid #ffffff;
+}
+/* line 8, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.videos-list .top-bar .x-title {
+  font-size: 18px;
+  color: #ffffff;
+  text-shadow: none;
+  font-weight: normal;
+}
+/* line 15, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.videos-list .top-bar .close-button .close {
+  color: #ffffff;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  top: 0px;
+  right: 0px;
+}
+/* line 23, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.videos-list .top-bar .close-button .close::before {
+  line-height: 50px!important;
+}
+/* line 30, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.videos-list .x-dataview-container .item {
+  border-bottom: 2px solid #ffffff;
+}
+/* line 33, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.videos-list .x-dataview-container .item .img-container {
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  box-pack: end;
+  justify-content: flex-end;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  box-align: start;
+  align-items: flex-start;
+}
+/* line 37, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.videos-list .x-dataview-container .item .gradient-bg {
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  box-pack: center;
+  justify-content: center;
+  overflow: hidden;
+  padding: 0px 10px 10px 10px;
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3) 30%, rgba(0, 0, 0, 0.6) 97%, rgba(0, 0, 0, 0.7));
+  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3) 30%, rgba(0, 0, 0, 0.6) 97%, rgba(0, 0, 0, 0.7));
+  background: -o-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3) 30%, rgba(0, 0, 0, 0.6) 97%, rgba(0, 0, 0, 0.7));
+  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3) 30%, rgba(0, 0, 0, 0.6) 97%, rgba(0, 0, 0, 0.7));
+  background: linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3) 30%, rgba(0, 0, 0, 0.6) 97%, rgba(0, 0, 0, 0.7));
+  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.3) 30%, rgba(0, 0, 0, 0.6) 97%, rgba(0, 0, 0, 0.7) 100%);
+  /* IE10+ */
+  position: relative;
+  bottom: -1px;
+}
+/* line 46, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.videos-list .x-dataview-container .item .gradient-bg h1 {
+  font-size: 15px;
+  color: #ffffff;
+  font-weight: normal;
+  margin: 0 0 5px 0;
+}
+/* line 52, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.videos-list .x-dataview-container .item .gradient-bg .stats {
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  box-pack: start;
+  justify-content: flex-start;
+}
+/* line 55, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.videos-list .x-dataview-container .item .gradient-bg .stats .comments {
+  font-size: 13px;
+  color: #7caad6;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: -moz-inline-box;
+  display: inline-flex;
+  margin: 0 15px 0 0;
+}
+/* line 61, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.videos-list .x-dataview-container .item .gradient-bg .stats .comments .icon {
+  color: #7caad6;
+  width: 18px;
+  height: 18px;
+  margin: 0 5px 0 0;
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.videos-list .x-dataview-container .item .gradient-bg .stats .comments .icon:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 18px !important;
+  font-weight: normal!important;
+  content: "\24";
+}
+/* line 68, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.videos-list .x-dataview-container .item .gradient-bg .stats .comments .icon::before {
+  line-height: 18px;
+  position: relative;
+}
+/* line 74, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.videos-list .x-dataview-container .item .gradient-bg .stats .ranking {
+  font-size: 13px;
+  color: #7caad6;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: -moz-inline-box;
+  display: inline-flex;
+  margin: 0 15px 0 0;
+}
+/* line 80, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.videos-list .x-dataview-container .item .gradient-bg .stats .ranking .icon {
+  color: #7caad6;
+  width: 18px;
+  height: 18px;
+  margin: 0 5px 0 0;
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.videos-list .x-dataview-container .item .gradient-bg .stats .ranking .icon:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 18px !important;
+  font-weight: normal!important;
+  content: "\40";
+}
+/* line 87, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.videos-list .x-dataview-container .item .gradient-bg .stats .ranking .icon::before {
+  line-height: 18px;
+  position: relative;
+}
+
+/* line 99, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel.x-layout-card-item {
+  background: #ffffff;
+}
+/* line 102, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .top-bar {
+  background: #ee7f00;
+}
+/* line 105, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .top-bar .x-panel-inner {
+  padding: 0 10px;
+}
+/* line 108, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .top-bar .back-button {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 0 auto;
+  -moz-box-flex: 1;
+  box-flex: 1;
+  flex: 1 0 auto;
+  color: #ffffff;
+}
+/* line 112, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .top-bar .back-button .back {
+  color: #ffffff;
+  height: 55px;
+}
+/* line 116, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .top-bar .back-button .back::before {
+  line-height: 55px;
+}
+/* line 120, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .top-bar .back-button .x-button-label, .video-panel .top-bar .back-button .x-badge, .video-panel .top-bar .back-button .x-hasbadge .x-badge, .x-hasbadge .video-panel .top-bar .back-button .x-badge {
+  color: #ffffff;
+  font-size: 12px;
+  line-height: 55px;
+  height: 55px;
+  font-weight: normal;
+  text-align: left;
+}
+/* line 129, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .top-bar .share-facebook-button {
+  display: block!important;
+  width: 30px;
+}
+/* line 133, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .top-bar .share-facebook-button .facebook {
+  color: #ffffff;
+  line-height: 30px;
+  height: 55px;
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.video-panel .top-bar .share-facebook-button .facebook:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 30px !important;
+  font-weight: normal!important;
+  content: "\26";
+}
+/* line 139, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .top-bar .share-facebook-button .facebook::before {
+  line-height: 55px;
+}
+/* line 144, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .top-bar .share-twitter-button {
+  display: block!important;
+  width: 30px;
+  margin: 0 0 0 10px;
+}
+/* line 149, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .top-bar .share-twitter-button .twitter {
+  color: #ffffff;
+  line-height: 30px;
+  height: 55px;
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.video-panel .top-bar .share-twitter-button .twitter:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 30px !important;
+  font-weight: normal!important;
+  content: "\42";
+}
+/* line 155, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .top-bar .share-twitter-button .twitter::before {
+  line-height: 55px;
+}
+/* line 161, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .bottom-bar {
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  -ms-border-radius: 0px;
+  -o-border-radius: 0px;
+  border-radius: 0px;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  padding: 0px;
+  background: #7caad6;
+  border-top: 1px solid #a4ccea;
+}
+/* line 169, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .bottom-bar.x-panel.x-floating .x-panel-inner {
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  -ms-border-radius: 0px;
+  -o-border-radius: 0px;
+  border-radius: 0px;
+  background: #7caad6;
+}
+/* line 174, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .bottom-bar.x-panel.x-floating .x-panel-inner .x-button.pressed {
+  background: #5389c2;
+}
+/* line 177, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .bottom-bar.x-panel.x-floating .x-panel-inner .x-button .x-button-icon {
+  color: #ffffff;
+}
+/* line 180, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .bottom-bar.x-panel.x-floating .x-panel-inner .x-button .x-button-label, .video-panel .bottom-bar.x-panel.x-floating .x-panel-inner .x-button .x-badge, .video-panel .bottom-bar.x-panel.x-floating .x-panel-inner .x-button .x-hasbadge .x-badge, .x-hasbadge .video-panel .bottom-bar.x-panel.x-floating .x-panel-inner .x-button .x-badge {
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  background: none;
+  border: 0px;
+  text-shadow: none;
+  font-size: 16px;
+  color: #ffffff;
+  font-weight: normal;
+  position: relative;
+  top: -2px;
+  left: 5px;
+  width: 0px;
+  min-width: 0;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: -moz-inline-box;
+  display: inline-flex;
+  overflow: visible;
+}
+/* line 197, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .bottom-bar.x-panel.x-floating .x-panel-inner .comments-button {
+  border-right: 1px solid #a4ccea;
+}
+/* line 200, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .bottom-bar.x-panel.x-floating .x-panel-inner .comments-button.pressed {
+  border-right: 1px solid #5389c2;
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.video-panel .bottom-bar.x-panel.x-floating .x-panel-inner .comments-button .comments:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 24px !important;
+  font-weight: normal!important;
+  content: "\24";
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/mixins/_icon.scss */
+.video-panel .bottom-bar.x-panel.x-floating .x-panel-inner .rating-button .rate:before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-family: "LDPA-Pictos" !important;
+  font-size: 24px !important;
+  font-weight: normal!important;
+  content: "\40";
+}
+/* line 215, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel h1 {
+  font-size: 22px;
+  line-height: 24px;
+  color: #000000;
+  margin: 20px 20px 5px 20px;
+}
+/* line 221, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .content {
+  margin: 0 20px 20px 20px;
+  padding: 20px 0 0 0;
+  border-top: 1px solid #d9e0f0;
+  font-size: 14px;
+}
+/* line 227, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .content p, .video-panel .content li, .video-panel .content a, .video-panel .content span {
+  font-size: 14px;
+}
+/* line 230, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .content p, .video-panel .content span {
+  margin-bottom: 10px;
+}
+/* line 233, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .content h1 {
+  font-size: 18px;
+  margin: 12px 0 10px 0;
+}
+/* line 237, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .content ul, .video-panel .content ol {
+  padding-bottom: 10px;
+  margin: 0 0 0 20px;
+}
+/* line 241, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .content li {
+  list-style: inherit;
+}
+/* line 244, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .content h2 {
+  font-size: 17px;
+  margin: 12px 0 10px 0;
+}
+/* line 248, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .content h2 span {
+  font-size: 19px;
+  color: #e64415 !important;
+}
+/* line 253, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .content h3, .video-panel .content h4, .video-panel .content h5, .video-panel .content h6 {
+  font-size: 16px;
+  margin: 10px 0 5px 0;
+}
+/* line 257, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .content a {
+  color: #5389c2;
+}
+/* line 260, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_videos.scss */
+.video-panel .content img {
+  position: relative;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
+/* line 1, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_media.scss */
+.media-panel {
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  -ms-border-radius: 0px;
+  -o-border-radius: 0px;
+  border-radius: 0px;
+  border: 0px;
+  padding: 0px;
+  top: 0;
+  left: 0;
+  background: #000;
+}
+/* line 11, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_media.scss */
+.media-panel.x-panel.x-floating > .x-body {
+  background: #000000;
+}
+/* line 14, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_media.scss */
+.media-panel.x-panel.x-floating .x-panel-inner {
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  -ms-border-radius: 0px;
+  -o-border-radius: 0px;
+  border-radius: 0px;
+  background: #000000;
+}
+/* line 20, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_media.scss */
+.media-panel.x-floating > .x-panel-inner:first-child {
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  -ms-border-radius: 0px;
+  -o-border-radius: 0px;
+  border-radius: 0px;
+  background: #000000;
+}
+/* line 24, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_media.scss */
+.media-panel iframe {
+  border: 0px;
+}
+/* line 28, d:/wamp/www/ldpa/resources/sass/phone/../../themes/phone/modules/_media.scss */
+.media-panel .close-button .close {
   color: #ffffff;
 }
 
