--- a/resources/sass/phone/_all.scss
+++ b/resources/sass/phone/_all.scss
@@ -20,6 +20,8 @@
 @import '../../themes/phone/modules/actions';
 @import '../../themes/phone/modules/articles';
 @import '../../themes/phone/modules/rate';
+@import '../../themes/phone/modules/videos';
+@import '../../themes/phone/modules/media';
 
 /**********************************************************************************************************************/
 /*
